[tool.poetry]
name = "nisystemlink-clients"
version = "2.17.0"
description = "NI-SystemLink Python API"
authors = ["National Instruments"]
maintainers = [
    "Richard Bell <richard.bell@emerson.com>",
    "Paul Spangler <paul.spangler@emerson.com>",
    "Cameron Waterman <cameron.waterman@emerson.com>",
]
keywords = ["nisystemlink", "systemlink"]
license = "MIT"
readme = "README.rst"
packages = [{ include = "nisystemlink" }]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Manufacturing",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Scientific/Engineering",
    "Topic :: System :: Hardware",
]

[tool.poetry.dependencies]
python   = "^3.9"
aenum    = "^3.1.11"
Events   = "^0.4"
httpx    = "^0.28.1"
requests = "^2.28.1"
uplink   = "^0.9.7"
pydantic = "^2.11.3"
pyyaml = "^6.0.1"
pandas = "^2.1.0"

[tool.poetry.group.dev.dependencies]
black               = ">=22.10,<25.0"
flake8              = "^5.0.4"
flake8-import-order = "^0.18.1"
pytest              = "^7.2.0"
pytest-asyncio      = "^0.20.1"
mypy                = "^1.15.0"
flake8-docstrings   = "^1.6.0"
poethepoet          = "^0.16.4"
types-requests      = "^2.28.11.4"
responses           = "^0.22.0"
types-pyyaml        = "^6.0.12"

[tool.poe.tasks]
test    = "pytest tests -m \"(not slow) and (not cloud) and (not enterprise)\""
doctest = "pytest --doctest-modules docs"
check   = "black --check nisystemlink examples tests"
format  = "black nisystemlink examples tests"
lint    = "flake8 nisystemlink examples tests"
types   = "mypy --config-file mypy.ini nisystemlink examples tests"

[tool.pytest.ini_options]
addopts = "--strict-markers"
testpaths = ["tests"]
markers = [
    "unit: mark a test as a unit test",
    "integration: mark a test as an integration test",
    "cloud: mark a test as a cloud integration test",
    "enterprise: mark a test as an enterprise integration test",
    "webserver: mark a test as a webserver integration test",
    "slow: mark a test as a slow test",
    "focus: focus a specific test during development",
]

[tool.black]
exclude = ".*\\.pyi"

[tool.semantic_release]
branch        = "master"
version_toml  = ["pyproject.toml:tool.poetry.version"]
build_command = "poetry build"

[build-system]
requires      = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
